err/safeid.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyrelic'...
Compiling './lib/python3.5/site-packages/pyrelic/common.py'...
***   File "./lib/python3.5/site-packages/pyrelic/common.py", line 40
    print "{0}\t{1}".format(label, value)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyrelic/lib'...
Listing './lib/python3.5/site-packages/pythia_pyrelic-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/safeid'...
Compiling './lib/python3.5/site-packages/safeid/common.py'...
***   File "./lib/python3.5/site-packages/safeid/common.py", line 41
    print "{0}\t{1}".format(label, value)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/safeid/httpJson.py'...
***   File "./lib/python3.5/site-packages/safeid/httpJson.py", line 33
    print "Fetching " + url
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/safeid/safeid.py'...
***   File "./lib/python3.5/site-packages/safeid/safeid.py", line 111
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/safeid-1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
